<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Orcana</string>

    <!--  Login Screen  -->
    <string name="login_screen_name">Device name</string>
    <string name="login_screen_passcode">Rep ID</string>
    <string name="login_screen_error_title">Log In Error</string>
    <string name="login_screen_invalid_passcode_error">Passcode incorrect.</string>
    <string name="login_screen_expired_passcode_error">Passcode expired.</string>

    <!--  Orcana  -->
    <string name="qrcode_subtext">
        The AR glasses must scan this QR code \n
        to join Orcana. Proceed when the AR \n
        glasses are connected.
    </string>
    <string name="qr_title">
        Connect the \n
        AR Glasses
    </string>
    <string name="input_title">Sign into case</string>
    <string name="qr_input_title">Two ways to join a session:</string>
    <string name="scan_qr_button">Scan QR Code</string>
    <string name="qr_code_view">QRCode View</string>
    <string name="type_info_text">Type Info</string>
    <string name="manual_entry_link_text">Or Manually Enter Case ID</string>
    <string name="logo_content_description">Orcana Logo</string>
    <string name="footer_content_description">footer</string>
    <string name="done">DONE</string>
    <string name="TermsCheckbox">I accept the <a href="https://app.orcana.io/terms_of_service">terms of service</a> and <a href="https://app.orcana.io/privacy_policy">privacy policy</a></string>

    <string name="default_user_name">AR Glasses</string>
<!--    <string name="default_room_name">xmosd</string>-->
    <string name="default_room_name" />
    <string name="login_screen_caseid">Case ID</string>
    <string name="passcode">25048049744075</string>
    <string name="login_screen_error_title_orcana">Uh-oh!</string>
    <string name="login_screen_auth_error_desc_CASE_DOES_NOT_EXIST">This Case ID is not valid, please try again or contact your medical device rep for the correct Case ID.</string>
    <string name="login_screen_auth_error_desc_CASE_IS_NOT_ACTIVE">This session has not started. Please contact your Medical Device Rep to begin.</string>
    <string name="screenshot">Screenshot View</string>
    <string name="mute">mute</string>
    <string name="min">min</string>
    <string name="mid">mid</string>
    <string name="loud">loud</string>
    <string name="max">max</string>
</resources>
