<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.login.CommunityLoginActivity">

    <ImageView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tablet_login_header" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/TypeInfoLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/tablet_login_input_background"
        android:elevation="1dp"
        android:translationY="-40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/input_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:text="@string/input_title"
            android:textColor="@color/orcanaBlack"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:background="@color/cream"
            android:textColorHint="@color/orcanaBlack"
            app:boxBackgroundColor="@color/orcanaBlack"
            app:boxStrokeColor="@color/orcanaBlack"
            app:boxStrokeErrorColor="@color/orcanaBlack"
            app:counterOverflowTextColor="@color/orcanaBlack"
            app:counterTextColor="@color/orcanaBlack"
            app:errorTextColor="@color/orcanaBlack"
            app:helperTextTextColor="@color/orcanaBlack"
            app:hintTextColor="@color/orcanaBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_title"
            app:placeholderTextColor="@color/orcanaBlack"
            app:prefixTextColor="@color/orcanaBlack"
            app:suffixTextColor="@color/orcanaBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:backgroundTint="@color/orcanaBlack"
                android:cursorVisible="true"
                android:fontFamily="@font/roboto"
                android:hint="@string/login_screen_name"
                android:inputType="textPersonName"
                android:textColor="@color/orcanaBlack"
                android:textColorHighlight="@color/orcanaBlack"
                android:textColorHint="@color/orcanaBlack"
                android:textColorLink="@color/orcanaBlack"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passcode_input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/orcanaBlack"
            android:visibility="gone"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:backgroundTint="@color/orcanaBlack"
                android:cursorVisible="true"
                android:fontFamily="@font/roboto"
                android:hint="@string/login_screen_passcode"
                android:inputType="number"
                android:text="@string/passcode"
                android:textColor="@color/orcanaBlack"
                android:textCursorDrawable="@drawable/text_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/caseid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="100dp"
            android:background="@color/cream"
            android:textColorHint="@color/orcanaBlack"
            app:boxBackgroundColor="@color/orcanaBlack"
            app:boxStrokeColor="@color/orcanaBlack"
            app:boxStrokeErrorColor="@color/orcanaBlack"
            app:counterOverflowTextColor="@color/orcanaBlack"
            app:counterTextColor="@color/orcanaBlack"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:errorTextColor="@color/orcanaBlack"
            app:helperTextTextColor="@color/orcanaBlack"
            app:hintTextColor="@color/orcanaBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_layout"
            app:placeholderTextColor="@color/orcanaBlack"
            app:prefixTextColor="@color/orcanaBlack"
            app:suffixTextColor="@color/orcanaBlack">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/case_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orcanaBlack"
                android:cursorVisible="true"
                android:fontFamily="@font/roboto"
                android:hint="@string/login_screen_caseid"
                android:inputType="textVisiblePassword"
                android:text="@string/default_room_name"
                android:textColor="@color/orcanaBlack"
                android:textColorHighlight="@color/orcanaBlack"
                android:textColorHint="@color/orcanaBlack"
                android:textColorLink="@color/orcanaBlack"
                android:textCursorDrawable="@drawable/text_cursor"
                android:textSize="16sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:buttonTint="@color/HyperLinkDefault"
            android:fontFamily="@font/roboto"
            android:text="@string/TermsCheckbox"
            android:textColorLink="@color/HyperLinkDefault"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/caseid_layout" />

        <Button
            android:id="@+id/input_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_background"
            android:enabled="false"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:text="@string/done"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/button_text_color_selector"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/checkBox" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/QRCodeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/tablet_login_input_background"
        android:elevation="1dp"
        android:translationY="-40dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <TextView
            android:id="@+id/qr_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/qr_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/qr_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:text="@string/qrcode_subtext"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_title" />

        <ImageView
            android:id="@+id/QRCodeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/qr_code_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/qr_subtext" />

        <Button
            android:id="@+id/qr_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/button_background"
            android:enabled="true"
            android:fontFamily="@font/roboto"
            android:padding="10dp"
            android:text="@string/continue_text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/QRCodeView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:contentDescription="@string/footer_content_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tablet_login_background" />

    <TextView
        android:id="@+id/versionTab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:textColor="@color/orcanaBlack"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


