<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    tools:context=".ui.login.CommunityLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/logo_content_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tablet_login_header" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ButtonLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/tablet_login_input_background"
            android:elevation="1dp"
            android:translationY="-40dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header2">


            <TextView
                android:id="@+id/qr_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/qr_input_title"
                android:textColor="@color/orcanaBlack"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/scan_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_background"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/scan_qr_button"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button_text_color_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qr_login_title" />

            <TextView
                android:id="@+id/manualEntryLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/manual_entry_link_text"
                android:textAlignment="center"
                android:textColor="@color/hyperlink_text_color_selector"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scan_button" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/LoginInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/tablet_login_input_background"
            android:elevation="1dp"
            android:translationY="-86dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header2">

            <TextView
                android:id="@+id/input_title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/input_title"
                android:textColor="@color/orcanaBlack"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name2_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="100dp"
                android:background="@color/peachy_orange_light"
                android:textColorHint="@color/orcanaBlack"
                app:boxBackgroundColor="@color/orcanaBlack"
                app:boxStrokeColor="@color/orcanaBlack"
                app:boxStrokeErrorColor="@color/orcanaBlack"
                app:counterOverflowTextColor="@color/orcanaBlack"
                app:counterTextColor="@color/orcanaBlack"
                app:errorTextColor="@color/orcanaBlack"
                app:helperTextTextColor="@color/orcanaBlack"
                app:hintTextColor="@color/orcanaBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_title2"
                app:placeholderTextColor="@color/orcanaBlack"
                app:prefixTextColor="@color/orcanaBlack"
                app:suffixTextColor="@color/orcanaBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="username"
                    android:backgroundTint="@color/orcanaBlack"
                    android:cursorVisible="true"
                    android:hint="@string/login_screen_name"
                    android:inputType="textPersonName"
                    android:textColor="@color/orcanaBlack"
                    android:textColorHighlight="@color/orcanaBlack"
                    android:textColorHint="@color/orcanaBlack"
                    android:textColorLink="@color/orcanaBlack"
                    android:textCursorDrawable="@drawable/text_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/caseid_layout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="100dp"
                android:background="@color/peachy_orange_light"
                android:textColorHint="@color/orcanaBlack"
                app:boxBackgroundColor="@color/orcanaBlack"
                app:boxStrokeColor="@color/orcanaBlack"
                app:boxStrokeErrorColor="@color/orcanaBlack"
                app:counterOverflowTextColor="@color/orcanaBlack"
                app:counterTextColor="@color/orcanaBlack"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:errorTextColor="@color/orcanaBlack"
                app:helperTextTextColor="@color/orcanaBlack"
                app:hintTextColor="@color/orcanaBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/name2_layout"
                app:placeholderTextColor="@color/orcanaBlack"
                app:prefixTextColor="@color/orcanaBlack"
                app:suffixTextColor="@color/orcanaBlack">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/case_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/orcanaBlack"
                    android:cursorVisible="true"
                    android:hint="@string/login_screen_caseid"
                    android:inputType="textVisiblePassword"
                    android:text="@string/default_room_name"
                    android:textColor="@color/orcanaBlack"
                    android:textColorHighlight="@color/orcanaBlack"
                    android:textColorHint="@color/orcanaBlack"
                    android:textColorLink="@color/orcanaBlack"
                    android:textCursorDrawable="@drawable/text_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passcode_input2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColorHint="@color/orcanaBlack"
                android:visibility="gone"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:backgroundTint="@color/orcanaBlack"
                    android:cursorVisible="true"
                    android:hint="@string/login_screen_passcode"
                    android:inputType="number"
                    android:text="@string/passcode"
                    android:textColor="@color/orcanaBlack"
                    android:textCursorDrawable="@drawable/text_cursor" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/button_background"
                android:enabled="false"
                android:fontFamily="@font/roboto"
                android:padding="10dp"
                android:text="@string/login"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/button_text_color_selector"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/caseid_layout2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/versionHUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textColor="@color/orcanaBlack"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


